<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ducdiep.bookshop.view.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
<!--        <action-->
<!--            android:id="@+id/action_HomeFragment_to_SearchFragment"-->
<!--            app:destination="@id/nav_search" />-->
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.ducdiep.bookshop.view.fragment.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.ducdiep.bookshop.view.fragment.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_other_product"
        android:name="com.ducdiep.bookshop.view.fragment.OtherProductFragment"
        android:label="@string/menu_other_product"
        tools:layout="@layout/fragment_other_product" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.ducdiep.bookshop.view.fragment.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/nav_introduce"
        android:name="com.ducdiep.bookshop.view.fragment.IntroduceFragment"
        android:label="@string/introduce"
        tools:layout="@layout/fragment_introduce" />
</navigation>