<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgr_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/backgr_home"
        android:paddingTop="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/btnBackToListBook"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp">

        </ImageView>
        <androidx.cardview.widget.CardView
            android:layout_below="@id/tvBookName"
            android:id="@+id/cardBook"
            android:layout_marginTop="@dimen/_5sdp"
            android:elevation="@dimen/_100sdp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_150sdp">
            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/imgBook"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ImageView>
        </androidx.cardview.widget.CardView>
        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:text="Hello"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_toRightOf="@id/btnBackToListBook"
            android:id="@+id/tvBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_below="@id/tvBookName"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/tvAuthor"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_toRightOf="@id/cardBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/tvPrice"
            android:layout_below="@+id/tvAuthor"
            android:layout_toRightOf="@id/cardBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <RelativeLayout
            android:id="@+id/layoutStar"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_below="@id/tvPrice"
            android:layout_toRightOf="@id/cardBook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp">
            <TextView
                android:textSize="@dimen/_15sdp"
                android:text="3.0"
                android:id="@+id/tvstarOfBook"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            </TextView>
            <ImageView
                android:layout_toRightOf="@id/tvstarOfBook"
                android:src="@drawable/star"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp">

            </ImageView>
        </RelativeLayout>
        <TextView
            android:layout_marginLeft="@dimen/_10sdp"
            android:textStyle="bold"
            android:id="@+id/des"
            android:textSize="@dimen/_14sdp"
            android:text="@string/description"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@id/layoutStar"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/cardBook"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="Hello"
            android:maxLines="4"
            android:layout_toRightOf="@id/cardBook"
            android:layout_below="@+id/des"
            android:id="@+id/tvDescrition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <LinearLayout
            android:id="@+id/layout3part"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_below="@id/cardBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAlignment="center"
                android:id="@+id/tvNumOfReview"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
            </TextView>
            <TextView
                android:textAlignment="center"
                android:id="@+id/tvCategory"
                android:text="Sách giải trí"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
            </TextView>
            <TextView
                android:textAlignment="center"
                android:id="@+id/tvNumberOfPage"
                android:text="51 trang"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
            </TextView>
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/_5sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:layout_below="@id/layout3part"
            android:id="@+id/tvRankAndComment"
            android:text="@string/rank_and_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <RatingBar
            android:layout_below="@id/tvRankAndComment"
            android:id="@+id/rateStar"
            android:numStars="5"
            android:rating="0"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:transformPivotX="@dimen/_30sdp"
            android:transformPivotY="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </RatingBar>
        <Button

            android:text="@string/evaluate"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_below="@id/tvRankAndComment"
            android:layout_toRightOf="@id/rateStar"
            android:id="@+id/btnEvaluate"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>
        <RelativeLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_below="@id/rateStar"
            android:id="@+id/tvSimilarBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"
                android:text="@string/similar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/similar_book"
            android:layout_below="@+id/tvSimilarBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>
        <Button
            android:text="@string/add_to_cart"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/similarBook"
            android:id="@+id/btnAddToCart"
            android:background="@drawable/btn_add_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>
    </RelativeLayout>
</ScrollView>