<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgr_home"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/_600sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        tools:context=".ui.home.HomeFragment">
        <ProgressBar
            android:layout_below="@+id/viewFlipper"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/progessbar"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp">

        </ProgressBar>
        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp">

        </ViewFlipper>
        <RelativeLayout
            android:layout_below="@id/viewFlipper"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/moreNewBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/_15sdp"
                    android:text="@string/new_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <ImageView
                    android:src="@drawable/ic_arrow_forward_black_24dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp">
                </ImageView>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listNewBook"
                android:layout_below="@+id/moreNewBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>
            <RelativeLayout
                android:layout_below="@id/listNewBook"
                android:id="@+id/moreHotBook"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/_15sdp"
                    android:text="@string/hot_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <ImageView
                    android:src="@drawable/ic_arrow_forward_black_24dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp">
                </ImageView>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listHotBook"
                android:layout_below="@+id/moreHotBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>
            <RelativeLayout
                android:id="@+id/moreOfferBook"
                android:layout_below="@id/listHotBook"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/_15sdp"
                    android:text="@string/offer_list_book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <ImageView
                    android:src="@drawable/ic_arrow_forward_black_24dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp">
                </ImageView>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="@dimen/_30sdp"
                android:id="@+id/listOfferBook"
                android:layout_below="@id/moreOfferBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>